# calculator_app

./: .clang-format  .gitignore  CMakeLists.txt
include/: calc_lib.h
src/: calc_lib.c  main.c
